--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "helmet": "^4.1.0",
     "http-errors": "~1.6.3",
+    "mercadopago": "^1.5.0",
     "morgan": "~1.9.1"
   }
 }
